# research_app

Data/myproject/: db.sqlite3  pyproject.toml
Data/myproject/myproject/: settings.py  urls.py
Data/myproject/project/: admin.py  forms.py  models.py  urls.py  views.py
Data/myproject/project/migrations/: 0001_initial.py
Data/myshop/: db.sqlite3
Data/myshop/myshop/: settings.py
Data/myshop/shop/: admin.py  forms.py  models.py  urls.py  views.py
Data/research_management/: db.sqlite3  manage.py
Data/research_management/projects/: admin.py  forms.py  models.py  urls.py  views.py
Data/research_management/research_management/: asgi.py  settings.py  urls.py  wsgi.py
myproject/: db.sqlite3  pyproject.toml
myproject/media/pdf/: แบบฟอรมโครงงงาน_7YT8MNF.docx
myproject/myproject/: settings.py  urls.py
myproject/research_app/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
myproject/research_app/migrations/: 0001_initial.py  0002_alter_projectmodel_project_tag.py
myproject/research_app/static/css/: styles.css
myproject/research_app/templates/admins/: admin_list.html  password_reset_modal.html
myproject/research_app/templates/admins/research_crud/: research_add_modal.html  research_delete_modal.html  research_edit_modal.html  research_list.html
myproject/research_app/templates/admins/tag_crud/: tag_add_modal.html  tag_delete_modal.html  tag_edit_modal.html  tag_list.html
myproject/research_app/templates/auth/: login.html  register.html
myproject/research_app/templates/users/: project_detail.html  user_list.html
(+19 files in other folders)
